k8s/api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: taskflow-api-network-policy
  namespace: taskflow-dev
spec:
  podSelector:
    matchLabels:
      app: taskflow-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb
      ports:
        - protocol: TCP
          port: 27017
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
